@@ -4,7 +4,17 @@ Title: Geographic Data Analysis and Modeling
 Version: 2.8-2
 Date: 2018-10-29
 Depends: methods, sp (>= 1.2-0), R (>= 3.0.0)
-Suggests: rgdal (>= 0.9-1), rgeos (>= 0.3-8), ncdf4, igraph, tcltk, parallel, rasterVis, MASS, sf
+Suggests: 
+    rgdal (>= 0.9-1),
+    rgeos (>= 0.3-8),
+    ncdf4,
+    igraph,
+    tcltk,
+    parallel,
+    rasterVis,
+    MASS,
+    sf,
+    testthat
 LinkingTo: Rcpp
 Imports: Rcpp
 SystemRequirements: C++11
@@ -12,12 +22,13 @@ Authors@R: c(
 	person("Robert J.", "Hijmans", role = c("cre", "aut"),  email = "r.hijmans@gmail.com"),
 	person("Jacob", "van Etten", role = "ctb"),
 	person("Joe", "Cheng", role = "ctb"),
-	person("Matteo", "Mattiuzzi", role = "ctb"),
 	person("Michael", "Sumner", role = "ctb"),
+	person("Matteo", "Mattiuzzi", role = "ctb"),
 	person("Jonathan A.", "Greenberg", role = "ctb"),
 	person("Oscar", "Perpinan Lamigueiro", role = "ctb"),
 	person("Andrew", "Bevan", role = "ctb"),
 	person("Roger", "Bivand", role = "ctb"),
+	person("Lorenzo", "Busetto", role = "ctb")
 	person("Mort", "Canty", role = "ctb"),
 	person("David", "Forrest", role = "ctb"),
 	person("Aniruddha", "Ghosh", role = "ctb"),
@@ -27,6 +38,7 @@ Authors@R: c(
 	person("Institute for Mathematics Applied Geosciences", role="cph"),
 	person("Charles", "Karney", role = "ctb"),
 	person("Steven", "Mosher", role = "ctb"),
+	person("Jakub", "Nowosad", role = "ctb")
 	person("Edzer", "Pebesma", role = "ctb"),
 	person("Etienne B.", "Racine", role = "ctb"),
 	person("Barry", "Rowlingson", role = "ctb"),
@@ -34,8 +46,8 @@ Authors@R: c(
 	person("Bill", "Venables", role = "ctb"),
 	person("Rafael", "Wueest", role = "ctb")
 	)
+	
 Description: Reading, writing, manipulating, analyzing and modeling of gridded spatial data. The package implements basic and high-level functions. Processing of very large files is supported.
 License: GPL (>=3)
 URL: http://www.rspatial.org/
 ByteCompile: TRUE
-	
