@@ -4,10 +4,8 @@
 # Licence GPL v3
 
 
-rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress, timer, chunksize, maxmemory, todisk, setfileext, tolerance, standardnames, depracatedwarnings, addheader, estimatemem, default=FALSE) {
-	
-	
-	
+rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress, timer, chunksize, maxmemory, todisk, setfileext, tolerance, standardnames, depracatedwarnings, addheader, default=FALSE) {
+		
 	setFiletype <- function(format) {
 		if (.isSupportedFormat(format)) {	
 			options(rasterFiletype = format)	
@@ -111,13 +109,13 @@ rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress
 		options(rasterMaxMemory = maxmemory )
 	}
 	
-	setEstimateMem <- function(estimatemem) {
-		if (is.logical(estimatemem)) { 
-			options(rasterEstimateMem = estimatemem )
-		} else {
-			warning(paste('estimateMem argument must be a logical value'))	
-		}
-	}
+#	setEstimateMem <- function(estimatemem) {
+#		if (is.logical(estimatemem)) { 
+#			options(rasterEstimateMem = estimatemem )
+#		} else {
+#			warning(paste('estimateMem argument must be a logical value'))	
+#		}
+#	}
 	
 	
 	setTolerance <- function(x) {
@@ -168,9 +166,10 @@ rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress
 		options(rasterTmpTime = 24*7)
 		options(rasterToDisk = FALSE)
 		options(rasterSetFileExt = TRUE)
-		options(rasterChunkSize = 10^7)
-		options(rasterMaxMemory = 10^8)
-		options(rasterEstimateMem = FALSE)
+		options(rasterChunkSize = 10^8)
+		options(rasterChunk = 10^8)
+		options(rasterMaxMemory = 10^9)
+#		options(rasterEstimateMem = TRUE)
 		options(rasterTolerance = 0.1)
 		options(rasterStandardNames = TRUE)
 		options(rasterDepracatedWarnings = TRUE)
@@ -191,7 +190,7 @@ rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress
 	if (!missing(todisk)) { setToDisk(todisk); cnt <- cnt+1 }
 	if (!missing(setfileext)) { setFileExt(setfileext); cnt <- cnt+1 }
 	if (!missing(maxmemory)) { setMaxMemorySize(maxmemory); cnt <- cnt+1 }
-	if (!missing(estimatemem)) { setEstimateMem(estimatemem); cnt <- cnt+1 }
+#	if (!missing(estimatemem)) { setEstimateMem(estimatemem); cnt <- cnt+1 }
 	if (!missing(chunksize)) { setChunksize(chunksize); cnt <- cnt+1 }
 	if (!missing(tolerance)) { setTolerance(tolerance); cnt <- cnt+1 }
 	if (!missing(standardnames)) { setStandardNames(standardnames); cnt <- cnt+1 }
@@ -214,8 +213,8 @@ rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress
 		tolerance=.tolerance(),
 		standardnames=.standardnames(),
 		depwarning=.depracatedwarnings(),
-		addheader=.addHeader(),
-		estimatemem = .estimateMem()
+		addheader=.addHeader()
+#		estimatemem = .estimateMem()
 	)
 	
 	save <- FALSE
@@ -233,7 +232,7 @@ rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress
 		oplst <- c(oplst, paste("rasterTimer=", lst$timer, sep=''))
 		oplst <- c(oplst, paste("rasterChunkSize=", lst$chunksize, sep=''))
 		oplst <- c(oplst, paste("rasterMaxMemory=", lst$maxmemory, sep=''))
-		oplst <- c(oplst, paste("rasterEstimateMem=", lst$estimatemem, sep=''))
+#		oplst <- c(oplst, paste("rasterEstimateMem=", lst$estimatemem, sep=''))
 		oplst <- c(oplst, paste("rasterSetFileExt=", lst$setfileext, sep=''))
 		oplst <- c(oplst, paste("rasterTolerance=", lst$tolerance, sep=''))
 		oplst <- c(oplst, paste("rasterStandardNames=", lst$standardnames, sep=''))
@@ -254,7 +253,7 @@ rasterOptions <- function(format, overwrite, datatype, tmpdir, tmptime, progress
 		cat('timer         :', lst$timer, '\n')
 		cat('chunksize     :', lst$chunksize, '\n')
 		cat('maxmemory     :', lst$maxmemory, '\n')
-		cat('estimatemem   :', lst$estimatemem, '\n')
+#		cat('estimatemem   :', lst$estimatemem, '\n')
 		cat('tmpdir        :', lst$tmpdir, '\n')
 		cat('tmptime       :', lst$tmptime, '\n')
 		cat('setfileext    :', lst$setfileext, '\n')
@@ -342,21 +341,6 @@ tmpDir <- function(create=TRUE) {
 
 
 
-.chunksize <- function(){
-	default <- 10^7
-	d <- getOption('rasterChunkSize')
-	if (is.null(d)) {
-		return( default )
-	} 
-	d <- round(as.numeric(d[1]))
-	if (is.na(d) | d < 10000) {
-		d <- default
-	} 
-	return(d)
-}	
-
-
-
 .setfileext <- function() {
 	d <- getOption('rasterSetFileExt')
 	if (is.null(d)) {
@@ -381,19 +365,19 @@ tmpDir <- function(create=TRUE) {
 }	
 
 
-.estimateMem <- function() {
-	default <- FALSE
-	d <- getOption('rasterEstimateMem')
-	if (is.null(d)) {
-		return( default )
-	} else {
-		return(isTRUE(d))
-	}
-}
+#.estimateMem <- function() {
+#	default <- FALSE
+#	d <- getOption('rasterEstimateMem')
+#	if (is.null(d)) {
+#		return( default )
+#	} else {
+#		return(isTRUE(d))
+#	}
+#}
 
 
 .maxmemory <- function() {
-	default <- 10^8
+	default <- 10^9
 	d <- getOption('rasterMaxMemory')
 	if (is.null(d)) {
 		return( default )
@@ -404,6 +388,33 @@ tmpDir <- function(create=TRUE) {
 	} 
 	return(d)
 }
+
+
+.chunksize <- function(){
+	default <- 10^8
+	d <- getOption('rasterChunkSize')
+	if (is.null(d)) {
+		return( default )
+	} 
+	d <- round(as.numeric(d[1]))
+	if (is.na(d) | d < 10000) {
+		d <- default
+	} 
+	return(d)
+}	
+
+
+.chunk <- function(){
+	d <- getOption('rasterChunk')
+	if (is.null(d)) {
+		return( .chunksize() )
+	} 
+	if (is.na(d) | d < 10000) {
+		return( .chunksize() )
+	} 
+	return(d)
+}
+
 
 
 .tolerance <- function() {
