@@ -8,12 +8,18 @@ add VRT output to saveStack
 Fix lines falling between the cracks in extract (calling rasterzeLines): https://stat.ethz.ch/pipermail/r-sig-geo/2014-May/020973.html
 Better handling of NA values in 1 byte raster files
 
-
 --- current version
+Improved estimation of available RAM with contributions by Lorenzo Busetto. The current situation is that RAM available is computed on windows and linux; but not yet on mac. Not more that 60% of available RAM is used (if the estimated RAM needed is not too low). Not more than raster:::.maxmemory() is used; but it should now be safe to set this to Inf (windows and linux only). If canProcessInMemory returns FALSE, chunksize is set 25% of available RAM, or raster:::.chunksize(), whichever is lower. (set options via rasterOptions())
+
+testthat unit tests introduced by Mike Sumner and Jakub Nowosad
+as.character() for Raster objects to create the R code to re-create the Raster skeleton in examples.
+
+Bug fixes:
 fixed the link for GADM countries download. Bug reported by Loic Dutrieux
 fixed corner-case bug in alignExtent (for a small extent, touching a grid cell), affecting crop; reported by 
 Judith Mourant and Paul Fenimore
 fixed problem with subs reported by Andy Craig https://github.com/rspatial/raster/issues/17
+Previous version had a maxmemory value that was too high (reported by Lorenzo Busetto)
 
 --- 16-Oct-2018, version: 2.7-15
 faster extraction for points via GDAL
@@ -606,7 +612,7 @@ predict automatic removal (to NA) of factor levels not used to build the model
 --- 29-Nov-2010,  version 1.7-6
 New function as.array
 improved sampleRegular for multi-layer objects
-Code simplications for 'raster', 'stack', and 'brick' functions
+Code simplifications for 'raster', 'stack', and 'brick' functions
 raster no longer has the "values" argument (use setValues)
 When adding layers to a RasterBrick, a RasterStack will be returned.
 Fixed calc for regression functions
